# stacky-NG

./: .gitignore  404.html  BUILD.MD  Build.ps1  BuildTools.ps1  CMakeLists.txt  FEATURES.md  LICENSE  NOTICE  README.MD  Roadmap.md  SetupStacky.md  StackyManager.md  Tutorial.md  VerifyBuildTools.ps1  build.bat  buildall.ps1  en.search-data.min.2883aeb3831dcae67e0916a8422804a63d5da31e3242029fe8e9c4cd05a211bf.json  en.search-data.min.e1032ee17ebfecd18da2e69592c459810fe04af63116fc28e76997a8aa1c0ad9.json  en.search.min.e8ba701b20c44857083a60fdf571e4587aa834d60c8c7d24fc5ab4d3ccb6f996.js  index.html  index.xml  manifest.json
.github/workflows/: ci.yml
Tools/CLI/: setup_stacky.md  setup_stacky.ps1
Tools/GUI/Setup_Stacky/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Readme.md  Setup_Stacky.csproj  Setup_Stacky.slnx
Tools/GUI/StackyManager/: .gitignore  Build.ps1  CMakeLists.txt  LICENSE  NOTICE  ReadMe.md  app.manifest  build.md
Tools/GUI/StackyManager/include/: NotificationManager.h  PinnedList.h  ShellManager.h  TrayIcon.h  Utils.h  resource.h  version.h
Tools/GUI/StackyManager/resources/: StackyManager.rc
Tools/GUI/StackyManager/src/: NotificationManager.cpp  ShellManager.cpp  TrayIcon.cpp  Utils.cpp  main.cpp
categories/: index.html  index.xml
docs/: 404.html  en.search-data.min.d357583e8d7ba483b679e2c15cc883c63a63a2fd02d5d3a2844903a66fd286ed.json  en.search-data.min.f7267e35aafe863942e488a01aa95e3ac39c63101a3fd059a68eace153ac3337.json  en.search.min.449a9cf02e0d4da60f2ac41f891f883694455d0a90f63c21c40272d99f739fb4.js  en.search.min.df1917004acbd0f164a80a5337c9d0dbf81d3346b132d8f3c36243beb9167579.js  en.search.min.f1e4c3fc256bb63ed9795b89b3ec378f85acfaaedb888da9f5a9522247138f23.js  index.html  index.xml  manifest.json  sitemap.xml
docs/categories/: index.html  index.xml
docs/docs/: index.html  index.xml
docs/docs/features/: index.html
docs/docs/license/: index.html
docs/docs/notice/: index.html
docs/docs/roadmap/: index.html
docs/docs/setupstacky/: index.html
docs/features/: index.html
docs/license/: index.html
docs/notice/: index.html
docs/roadmap/: index.html
docs/setupstacky/: index.html
docs/tags/: index.html  index.xml
docs/tutorial/: index.html
generateChm/: Readme.md  genHelp.ps1  genHelp.py  helpers.py  project_gen.py
src/: app.cpp  app.h  bmp.cpp  bmp.h  cache_manager.cpp  cache_manager.h  common.h  config.cpp  config.h  logger.cpp  logger.h  resource.h  stacky.cpp  stacky.rc  util.cpp  util.h
tags/: index.html
vsproj/: Makefile  stacky.sln  stacky.vcxproj
(+187 files in other folders)
